# blog.takurinton.dev

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json  wmr.config.js  wmr.config.ts
.claude/: README.md  settings.json
.claude/hooks/: post-edit.sh  pre-commit.sh  user-prompt-submit.sh
.claude/plans/: render-dual-mode.md
.codex/: config.toml  hooks.json
.codex/rules/: default.rules
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yaml  deploy.yml  preview.yaml  test.yaml
app/: Cargo.toml
app/src/: component.rs  css.rs  lib.rs  tokenizer.rs
app/src/codegen/: client.rs  mod.rs  ssr.rs
app/src/parser/: mod.rs
app/tests/: lib.rs
generator/: Cargo.toml
generator/src/: main.rs
markdown/: Cargo.toml
markdown/src/: generator.rs  lexer.rs  lib.rs  token.rs  tokenizer.rs
plugins/feed/: index.js
plugins/sentence/: index.js
posts/: 1.md  103.md  105.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  19.md  21.md  22.md  26.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  38.md  39.md  40.md  42.md  49.md  50.md  52.md  55.md  56.md  57.md  6.md  71.md  74.md  75.md  76.md  79.md  8.md  81.md  84.md  (+2 more)
preact-iso/: bun.lockb
preact-iso/src/: prerender.d.ts  prerender.js
public/: header.tsx  index.html  index.js  index.tsx  prerender.js  prerender.tsx  style.css  types.d.ts
public/contents/: 108.md  109.md  110.md  112.md  12.md  14.md  16.md  17.md  18.md  2.md  23.md  31.md  36.md  37.md  5.md  58.md  59.md  67.md  (+12 more)
scripts/: gen-template.js  index.js  make-feed.js  pre-build.js  prerender.js  sync-claude-to-codex.py  wasm-boot.js  wasm-hydrate.js
site/: Cargo.toml
site/src/: global_styles.rs  lib.rs  og.rs  routes.rs  style.rs
site/src/components/: document.rs  header.rs  mod.rs
site/src/pages/: builder.js  home.rs  post.rs
styles/: index.home.css  index.post.css  root.css  style.css
wasm/: Cargo.toml
wasm/src/: cache.rs  lib.rs  reactive.rs  router.rs  signal.rs
(+44 files in other folders)
