[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "Window", "Node", "HtmlElement"] }
proc-macro2 = "1.0"
markdown = { path = "../markdown" }
quote = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
