[package]
name = "site"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm = { path = "../wasm" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlHeadElement",
    "Node",
    "Response",
] }
