[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "Node",
    "Text",
    "Event",
    "MouseEvent",
    "EventTarget",
    "History",
    "Location",
    "Response",
    "DomParser",
    "SupportedType",
    "HtmlBodyElement",
    "HtmlHeadElement",
    "NodeList",
] }
markdown = { path = "../markdown" }
app = { path = "../app" }
